using EasyPeasy.Core.Interfaces.Fields;
using MukhaLab.Database;
using System.Text.Json.Serialization;

namespace EasyPeasy.Core.Models;

/// <summary>DTO for <see cref="EasyPeasy.Core.Entities.UnitEntity"/>.</summary>
public class UnitModel : AbstractModel, IReviewInfo, IAuditInfo, IGuidRecord
{
    public Guid RecordGuid { get; set; } = Guid.NewGuid();

    public string Title { get; set; } = "Autogenerated";

    public string? Description { get; set; }

    public string? Content { get; set; }

    public DateTime? LastReviewDate { get; set; }

    public int ReviewCount { get; set; } = 0;

    public DateTime CreatedAt { get; set; } = DateTime.UtcNow;

    public DateTime? UpdatedAt { get; set; }

    public int CourseId { get; set; }

    public IList<WordModel>? Words { get; set; }

    public IList<IrregularFormModel>? IrregularForms { get; set; }

    public IList<StudyCardModel>? StudyCards { get; set; }

    public IList<TestCardModel>? TestCards { get; set; }

    [JsonIgnore]
    public CourseModel? Course { get; set; }

    /// <summary>
    /// Resets identity fields (<c>Id</c>, <c>CourseId</c>, timestamps) on this unit and every child
    /// in <see cref="Words"/>, <see cref="IrregularForms"/>, <see cref="StudyCards"/>, and
    /// <see cref="TestCards"/>, in place, for cloning as a brand-new record (e.g. import/duplication).
    /// </summary>
    public UnitModel ClearKeyFields()
    {
        this.Id = 0;
        this.CourseId = 0;
        this.CreatedAt = DateTime.UtcNow;
        this.UpdatedAt = null;

        if (this.Words is not null)
        {
            foreach (var word in this.Words)
            {
                word.Id = 0;
                word.UnitId = 0;
                word.CreatedAt = DateTime.UtcNow;
                word.UpdatedAt = null;
            }
        }

        if (this.IrregularForms is not null)
        {
            foreach (var form in this.IrregularForms)
            {
                form.Id = 0;
                form.UnitId = 0;
                form.CreatedAt = DateTime.UtcNow;
                form.UpdatedAt = null;
            }
        }

        if (this.StudyCards is not null)
        {
            foreach (var card in this.StudyCards)
            {
                card.Id = 0;
                card.UnitId = 0;
                card.CreatedAt = DateTime.UtcNow;
                card.UpdatedAt = null;
            }
        }

        if (this.TestCards is not null)
        {
            foreach (var card in this.TestCards)
            {
                card.Id = 0;
                card.UnitId = 0;
                card.CreatedAt = DateTime.UtcNow;
                card.UpdatedAt = null;
            }
        }

        return this;
    }

    /// <summary>
    /// Resets review/rating state on this unit and every child in <see cref="Words"/>,
    /// <see cref="IrregularForms"/>, <see cref="StudyCards"/>, and <see cref="TestCards"/>, in place.
    /// </summary>
    public UnitModel ClearLearningProgress()
    {
        this.LastReviewDate = null;
        this.ReviewCount = 0;

        if (this.Words is not null)
        {
            foreach (var word in this.Words)
            {
                word.Rate = 3.0f;
                word.LastReviewDate = null;
                word.ReviewCount = 0;
            }
        }

        if (this.IrregularForms is not null)
        {
            foreach (var form in this.IrregularForms)
            {
                form.Rate = 3.0f;
                form.LastReviewDate = null;
                form.ReviewCount = 0;
            }
        }

        if (this.StudyCards is not null)
        {
            foreach (var card in this.StudyCards)
            {
                card.Rate = 3.0f;
                card.LastReviewDate = null;
                card.ReviewCount = 0;
            }
        }

        if (this.TestCards is not null)
        {
            foreach (var card in this.TestCards)
            {
                card.Rate = 3.0f;
                card.LastReviewDate = null;
                card.ReviewCount = 0;
            }
        }

        return this;
    }

    /// <summary>Clears <see cref="WordModel.Examples"/> on every word in <see cref="Words"/>, in place.</summary>
    public UnitModel RemoveExamples()
    {
        if (this.Words is not null)
        {
            foreach (var word in this.Words)
            {

                word.Examples = [];
            }
        }

        return this;
    }
}
