@startuml EasyPeasy Entities

' Определение стилей для полей интерфейсов
!define AUDIT(x)    <b><color:#4A90E2>x 🕐</color></b>
!define REVIEW(x)   <b><color:#7ED321>x 🔄</color></b>
!define RATE(x)     <b><color:#F5A623>x ⭐</color></b>
!define FIELD(x)    <color:#50555C>x</color>
!define FK_FIELD(x) <b><color:#999999>x FK 🔗</color></b>
!define PFK_FIELD(x) <b><color:#BD10E0>x PFK 🔗🔑</color></b>
!define INHERITED(x) <i><color:#999999>x</color></i>
!define INHERITED_PK(x) <i><color:#999999>x 🔑</color></i>
!define PK(x)       <b><color:#b8861b>x 🔑</color></b>

' Настройка стилей для всей диаграммы
skinparam {
    PackageStyle rectangle
    ArrowColor #2688d4
    ArrowThickness 1.5
    EntityBorderThickness 1.5
    EntityBorderColor #2688d4
    EntityBackgroundColor white
    EntityFontColor black
    EntityFontSize 12
    padding 4
    roundCorner 8
    defaultTextAlignment left
    shadowing false
    direction top to bottom
}

title EasyPeasy Entities

legend top left

**IReviewInfo**
    LastReviewDate : DateTime? 🔄
    ReviewCount : int 🔄

**IRateInfo**
    Rate : float ⭐

**IAuditInfo**
    CreatedAt : DateTime 🕐
    UpdatedAt : DateTime? 🕐

Id (🔑, from AbstractEntity) and RecordGuid (from IGuidRecord) are shown in italic/grey — not
every entity has RecordGuid (see Subject).

end legend

entity "Subject<AbstractEntity>" as Subject {
    INHERITED_PK(+ Id : int)
    FIELD(+ Title : string)
    FIELD(+ Description : string?)
    AUDIT(+ CreatedAt : DateTime)
    AUDIT(+ UpdatedAt : DateTime?)
    --
    FIELD(+ Courses : List<Course>)
}

entity "Course<AbstractEntity>" as Course {
    INHERITED_PK(+ Id : int)
    INHERITED(+ RecordGuid : Guid)
    FIELD(+ Title : string)
    FIELD(+ Description : string?)
    FIELD(+ LanguageCode : string?)
    AUDIT(+ CreatedAt : DateTime)
    AUDIT(+ UpdatedAt : DateTime?)
    FK_FIELD(+ SubjectId : int?)
    --
    FIELD(+ Subject : Subject?)
    FIELD(+ Units : List<Unit>)
}

entity "Unit<AbstractEntity>" as Unit {
    INHERITED_PK(+ Id : int)
    INHERITED(+ RecordGuid : Guid)
    FIELD(+ Title : string)
    FIELD(+ Description : string?)
    FIELD(+ Content : string?)
    REVIEW(+ LastReviewDate : DateTime?)
    REVIEW(+ ReviewCount : int)
    AUDIT(+ CreatedAt : DateTime)
    AUDIT(+ UpdatedAt : DateTime?)
    FK_FIELD(+ CourseId : int)
    --
    FIELD(+ Course : Course?)
    FIELD(+ Words : List<Word>)
    FIELD(+ IrregularForms : List<IrregularForm>)
    FIELD(+ StudyCards : List<StudyCard>)
    FIELD(+ TestCards : List<TestCard>)
}

entity "Word<AbstractEntity>" as Word {
    INHERITED_PK(+ Id : int)
    INHERITED(+ RecordGuid : Guid)
    FIELD(+ Word : string)
    FIELD(+ Transcription : string?)
    FIELD(+ Translation : string?)
    FIELD(+ Note : string?)
    FIELD(+ Pronunciation : byte[]?)
    REVIEW(+ LastReviewDate : DateTime?)
    REVIEW(+ ReviewCount : int)
    RATE(+ Rate : float)
    AUDIT(+ CreatedAt : DateTime)
    AUDIT(+ UpdatedAt : DateTime?)
    FK_FIELD(+ UnitId : int)
    --
    FIELD(+ Unit : Unit?)
    FIELD(+ Examples : List<Example>)
}

entity "Example<AbstractEntity>" as Example {
    INHERITED_PK(+ Id : int)
    INHERITED(+ RecordGuid : Guid)
    FIELD(+ Sentence : string)
    FIELD(+ Translation : string?)
    FK_FIELD(+ WordId : int)
    --
    FIELD(+ Word : Word?)
}

entity "IrregularForm<AbstractEntity>" as IrregularForm {
    INHERITED_PK(+ Id : int)
    INHERITED(+ RecordGuid : Guid)
    FIELD(+ FirstForm : string)
    FIELD(+ FirstFormTranscription : string?)
    FIELD(+ FirstFormTranslation : string?)
    FIELD(+ FirstFormPronunciation : byte[]?)
    FIELD(+ PartOfSpeech : string)
    FIELD(+ SecondForm : string)
    FIELD(+ SecondFormTranscription : string?)
    FIELD(+ SecondFormTranslation : string?)
    FIELD(+ SecondFormPronunciation : byte[]?)
    FIELD(+ ThirdForm : string?)
    FIELD(+ ThirdFormTranscription : string?)
    FIELD(+ ThirdFormTranslation : string?)
    FIELD(+ ThirdFormPronunciation : byte[]?)
    REVIEW(+ LastReviewDate : DateTime?)
    REVIEW(+ ReviewCount : int)
    RATE(+ Rate : float)
    AUDIT(+ CreatedAt : DateTime)
    AUDIT(+ UpdatedAt : DateTime?)
    FK_FIELD(+ UnitId : int)
    --
    FIELD(+ Unit : Unit?)
}

entity "StudyCard<AbstractEntity>" as StudyCard {
    INHERITED_PK(+ Id : int)
    INHERITED(+ RecordGuid : Guid)
    FIELD(+ Kind : StudyCardKind)
    FIELD(+ Title : string)
    FIELD(+ Body : string?)
    FIELD(+ Dialogue : string?)
    FIELD(+ CodeBlock : string?)
    FIELD(+ RevealMode : BlurRevealMode?)
    REVIEW(+ LastReviewDate : DateTime?)
    REVIEW(+ ReviewCount : int)
    RATE(+ Rate : float)
    AUDIT(+ CreatedAt : DateTime)
    AUDIT(+ UpdatedAt : DateTime?)
    FK_FIELD(+ UnitId : int)
    --
    FIELD(+ Unit : Unit?)
}

entity "TestCard<AbstractEntity>" as TestCard {
    INHERITED_PK(+ Id : int)
    INHERITED(+ RecordGuid : Guid)
    FIELD(+ Kind : TestCardKind)
    FIELD(+ Title : string?)
    FIELD(+ Question : string?)
    FIELD(+ Hint : string?)
    FIELD(+ Image : byte[]?)
    FIELD(+ FormattedText : string?)
    FIELD(+ Explanation : string?)
    FIELD(+ Options : string?)
    FIELD(+ CorrectAnswers : string?)
    REVIEW(+ LastReviewDate : DateTime?)
    REVIEW(+ ReviewCount : int)
    RATE(+ Rate : float)
    AUDIT(+ CreatedAt : DateTime)
    AUDIT(+ UpdatedAt : DateTime?)
    FK_FIELD(+ UnitId : int)
    --
    FIELD(+ Unit : Unit?)
}

enum StudyCardKind {
    Term
    Text
    BlurredText
}

enum BlurRevealMode {
    Independent
    Grouped
}

enum TestCardKind {
    SingleChoice
    MultipleChoice
    ShortAnswer
    Cloze
    Matching
}

' Relationships
Subject |o--o{ Course : "groups courses"
Course ||--o{ Unit : "has units"
Unit ||--o{ Word : "has words"
Unit ||--o{ IrregularForm : "has irregular forms"
Unit ||--o{ StudyCard : "has study cards"
Unit ||--o{ TestCard : "has test cards"
Word ||--o{ Example : "has examples"

StudyCard ..> StudyCardKind
StudyCard ..> BlurRevealMode
TestCard ..> TestCardKind

@enduml
